# local-llm-chat-bot

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: extractor.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b5e2681000a2_add_semantic_memory.py  df95b464e9c1_add_message_table.py  f040da49c12c_initial_migration.py
backend/app/: chat.py  configs.py  const.py  db.py  llm.py  main.py  memory.py  services.py
backend/app/database/: base.py  chat_session.py  message.py  semantic_memory.py
backend/app/memory/: base.py  const.py  interface.py  schemas.py  sliding_window.py  summary.py  token_sliding.py
backend/app/prompt/: builder.py  schemas.py
backend/app/routers/: chats.py  message.py  websocket.py
backend/app/semantic/: extractor.py  schemas.py  service.py
backend/app/service/: chat_session.py  message.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  style.css
